[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/game/enemy/enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 349.116

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.0
height = 22.0

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="spr" type="ColorRect" parent="."]
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
color = Color( 1, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_box" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="area" type="Area2D" parent="."]

[node name="detect" type="CollisionShape2D" parent="area"]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 1, 0 )
shape = SubResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[node name="stun_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
